<resources>
    <string name="app_name">Service Man</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_not_match">Conform password not match</string>
    <string name="phone_to_short">This Phone number is too short</string>
    <string name="error_invalid_date">This date is invalid</string>

    <string name="assigned">Assigned</string>
    <string name="completed">Completed</string>
    <string name="approx_price">Approx Price:&#160;</string>
    <string name="approx_time">Approx Time:&#160;</string>
    <string name="running_time">Running Time:&#160;</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>
    <string name="amount">Amount:\u0020</string>
    <string name="time_taken">\u0020Time Taken:\u0020</string>
    <string name="per">\u0020Per</string>
    <string name="service_done">Service Done</string>
    <string name="time">Time</string>
    <string name="book_price">Book Price</string>
    <string name="additional_charges">Additional Charges</string>
    <string name="service">Service</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="total_amount">Total Amount:\u0020</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_note">Forgot your login details? Get help signing in.</string>
    <string name="sinup_note">Don\'t have an account? Sign up.</string>
    <string name="forgot_note_2">Enter the email address that you used to sign up on</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="record_not_found">Record Not Found</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_photo">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="profile_pic_updated">Profile Picture Updated Successfully</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_manage">User Manage</string>
    <string name="user_profile">User Profile</string>
    <string name="communicate">Communicate</string>
    <string name="view_offer">View Offers</string>
    <string name="rate_us">Rating Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="my_services">My Services</string>
    <string name="login">Login</string>

    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="start_time">Start Time:</string>
    <string name="services">Services</string>

    <string name="service_charge">Service Charge</string>
    <string name="extras_charges">Extras Charges</string>
    <string name="offer_discount">Offer Discount</string>
    <string name="total_payment">Total Payment</string>
    <string name="extras">Extras:</string>
    <string name="total_spent_time">Total Spent Time:</string>
    <string name="accept_payment">Accept Payment</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>

    <string name="visit">VISIT:</string>
    <string name="visit_time">VISIT TIME:</string>
    <string name="visit_at">Visit At:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="wel_come">Wel Come</string>
    <string name="user_not_found">User not found.</string>

</resources>
