<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context="codecanyon.serviceman.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">


            <ImageView
                android:layout_width="@dimen/space_100"
                android:layout_height="@dimen/space_100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_50"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/app_logo" />

            <util.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />

            <util.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wel_come"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/xml_rounded_corner_white_bg_transperent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/space_10"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/space_10"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/color_bg"
                android:theme="@style/edittext_white" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/xml_rounded_corner_white_bg_transperent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/space_10"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/space_10"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/color_bg"
                android:theme="@style/edittext_white" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/xml_rounded_corner_border_white"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_login_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

    </ScrollView>
</layout>