<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="@dimen/space_10"
    tools:context="codecanyon.serviceman.PaymentDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/service_charge"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_paymentdetail_service_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="00"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/extras_charges"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_paymentdetail_extra_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="00"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/offer_discount"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_paymentdetail_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="00"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_payment"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_paymentdetail_total_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="00"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_8"
        android:text="@string/extras"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_paymentdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginEnd="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/tv_paymentdetail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:text="00"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_spent_time"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_paymentdetail_spenttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:layout_marginLeft="@dimen/space_5"
                android:text="00"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_15"
            android:background="@drawable/xml_rounded_button_blue"
            android:orientation="vertical"
            android:padding="2dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_paymentdetail_type"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/xml_rounded_button_blue"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card" />
            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_15"
            android:background="@drawable/xml_rounded_button_blue"
            android:gravity="center"
            android:onClick="paymentClick"
            android:padding="@dimen/space_8"
            android:text="@string/accept_payment"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
