<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="codecanyon.serviceman.ForgotActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Cancle"
                android:padding="@dimen/space_10"
                android:src="@drawable/ic_arrow_back_white"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:layout_width="@dimen/space_100"
                    android:layout_height="@dimen/space_100"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/space_20"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/app_logo" />

                <util.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18" />

                <util.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wel_come"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_50"
                    android:gravity="center"
                    android:text="@string/forgot_note_2"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/xml_rounded_corner_white_bg_transperent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/space_10"
                    android:ems="10"
                    android:gravity="start|center_vertical"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/space_10"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_bg"
                    android:theme="@style/edittext_white" />

                <Button
                    android:id="@+id/btn_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20"
                    android:background="@drawable/xml_rounded_corner_border_white"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>