<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/space_8"
        android:text="@string/service_done"
        android:textColor="@color/color_orenge"
        android:textSize="@dimen/text_18" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:gravity="center"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tv_service_total_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/book_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/tv_service_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="00$"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_5"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/xml_bottom_border_black"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/space_8">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/additional_charges"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <ImageView
                    android:id="@+id/fab"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/xml_circle_imageview"
                    app:srcCompat="@drawable/ic_plus" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_additional_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--<RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_8">

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/editText2"
                            android:layout_toStartOf="@+id/editText2"
                            android:background="@drawable/xml_editext_border"
                            android:ems="10"
                            android:hint="@string/service"
                            android:inputType="textPersonName"
                            android:padding="@dimen/space_8" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="@dimen/space_100"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="@dimen/space_5"
                            android:layout_marginStart="@dimen/space_5"
                            android:background="@drawable/xml_editext_border"
                            android:ems="10"
                            android:hint="@string/price"
                            android:inputType="number"
                            android:padding="@dimen/space_8" />

                    </RelativeLayout>-->

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/space_8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="@dimen/text_16"
                android:autoSizeMinTextSize="@dimen/text_10"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/tv_service_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10"
                android:background="@drawable/xml_rounded_button_blue"
                android:gravity="center"
                android:paddingStart="@dimen/space_20"
                android:paddingTop="@dimen/space_5"
                android:paddingEnd="@dimen/space_20"
                android:paddingBottom="@dimen/space_5"
                android:text="paid"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>